[gd_scene load_steps=35 format=3 uid="uid://khg6c7a2fvde"]

[ext_resource type="Script" path="res://PlayerMovement.gd" id="1_3k6b3"]
[ext_resource type="Texture2D" uid="uid://q6g0lk67sjdr" path="res://Assets/Sprites/fox_idle.png" id="2_6kosu"]
[ext_resource type="Texture2D" uid="uid://b2snxy56wn700" path="res://Assets/Sprites/fox_jump.png" id="2_v4ltq"]
[ext_resource type="Texture2D" uid="uid://dfd7i1s1ve1fj" path="res://Assets/Sprites/fox_walk.png" id="3_86jrc"]
[ext_resource type="Texture2D" uid="uid://b5w4oegroyy45" path="res://Assets/Sprites/griffox_walk.png" id="4_ijcha"]
[ext_resource type="AudioStream" uid="uid://dadfempqrk6r8" path="res://Assets/SFX/ScratchUp.ogg" id="5_sny51"]
[ext_resource type="Texture2D" uid="uid://ddxc01nnfkhgv" path="res://Assets/Sprites/winged_fox_walk.png" id="5_ue7f5"]
[ext_resource type="Texture2D" uid="uid://o32774w3hrri" path="res://Assets/Sprites/jumping_winged_fox.png" id="6_iqmve"]
[ext_resource type="AudioStream" uid="uid://cc2hcitpr67pq" path="res://Assets/SFX/ScratchDown.ogg" id="6_mur7g"]
[ext_resource type="Texture2D" uid="uid://dsdxfp23xxefg" path="res://Assets/Sprites/griffox_jump.png" id="6_njf3a"]
[ext_resource type="AudioStream" uid="uid://cg0co0lem0v26" path="res://Assets/SFX/ScratchClunk.ogg" id="7_wiifw"]
[ext_resource type="AudioStream" uid="uid://c1ylaojf11fe4" path="res://Assets/Music/Komiku_-_13_-_Bleu.mp3" id="11_kbex8"]
[ext_resource type="AudioStream" uid="uid://3o55ly27aekx" path="res://Assets/Music/TownTheme.mp3" id="11_l5hlq"]
[ext_resource type="AudioStream" uid="uid://ba2mdompcon4n" path="res://Assets/Music/Wooden Inn.mp3" id="13_wkcew"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0rx2x"]
friction = 0.2
bounce = 0.01

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ooj"]
atlas = ExtResource("4_ijcha")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58o7h"]
atlas = ExtResource("5_ue7f5")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_huvuf"]
atlas = ExtResource("3_86jrc")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po41m"]
atlas = ExtResource("3_86jrc")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl08m"]
atlas = ExtResource("3_86jrc")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s876a"]
atlas = ExtResource("3_86jrc")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtxts"]
atlas = ExtResource("4_ijcha")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj22"]
atlas = ExtResource("4_ijcha")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e67y"]
atlas = ExtResource("4_ijcha")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vori6"]
atlas = ExtResource("4_ijcha")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_625lo"]
atlas = ExtResource("5_ue7f5")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f2en"]
atlas = ExtResource("5_ue7f5")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuy58"]
atlas = ExtResource("5_ue7f5")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3fxu"]
atlas = ExtResource("5_ue7f5")
region = Rect2(144, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fbgat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6kosu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ooj")
}],
"loop": true,
"name": &"idle_griffox",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58o7h")
}],
"loop": true,
"name": &"idle_winged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v4ltq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_njf3a")
}],
"loop": true,
"name": &"jump_griffox",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_iqmve")
}],
"loop": true,
"name": &"jump_winged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_huvuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po41m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl08m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s876a")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtxts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e67y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vori6")
}],
"loop": true,
"name": &"walk_griffox",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_625lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f2en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuy58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3fxu")
}],
"loop": true,
"name": &"walk_winged",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3tiky"]
radius = 12.5
height = 48.0

[sub_resource type="Animation" id="Animation_nuuvu"]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 15.708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_4c38n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0kg8"]
_data = {
"RESET": SubResource("Animation_4c38n"),
"death": SubResource("Animation_nuuvu")
}

[node name="PlayerRigidBody" type="RigidBody2D"]
position = Vector2(542, 94)
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_0rx2x")
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_3k6b3")

[node name="PlayerAnimSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fbgat")
animation = &"jump_griffox"
autoplay = "walk"

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3tiky")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sny51")
volume_db = -10.0
bus = &"SFX"

[node name="WalkSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mur7g")
volume_db = -10.0
bus = &"SFX"

[node name="BumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wiifw")
volume_db = -10.0
bus = &"SFX"

[node name="WalkNoiseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Cycle1Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_kbex8")
volume_db = -2.0
bus = &"Music"

[node name="Cycle2Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_l5hlq")
volume_db = -7.0
bus = &"Music"

[node name="Cycle3Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_wkcew")
volume_db = -2.0
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q0kg8")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="PlayerAnimSprite" to="." method="_on_player_anim_sprite_ready"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
